--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -10,8 +10,8 @@
     </head>
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
-            <div class="alert alert-success fill-parent">
-                <h1 th:if="${param.success}" class="display-5" id="success">Success</h1>
+            <div th:if="${param.success}" class="alert alert-success fill-parent">
+                <h1 class="display-5" id="success">Success</h1>
                 <span>Your changes were successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
 <!--            <div class="alert alert-danger fill-parent">
