--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,12 +11,15 @@
 <body class="p-3 mb-2 bg-light text-black">
 <div class="container justify-content-center w-25 p-3" style="background-color: #eeeeee; margin-top: 5em;">
     <h1 class="display-5">Login</h1>
-    <form th:action="@{/login}" method="POST">
+    <form action="#" th:action="@{/login}" method="POST">
         <div id="error-msg" th:if="${param.error}" class="alert alert-danger">
             Invalid username or password
         </div>
         <div id="logout-msg" th:if="${param.logout}" class="alert alert-dark">
             You have been logged out
+        </div>
+        <div id="success-msg" th:if="${signupSuccess}" class="alert alert-dark">
+            You successfully signed up!
         </div>
         <div class="form-group">
             <label for="inputUsername">Username</label>
