--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,14 +11,14 @@
 <body class="p-3 mb-2 bg-light text-black">
 <div class="container justify-content-center w-50 p-3" style="background-color: #eeeeee; margin-top: 5em;">
     <div class="form-group">
-        <label><a th:href="@{/login}">Back to Login</a></label>
+        <label><a href="#" th:href="@{/login}">Back to Login</a></label>
     </div>
 
     <h1 class="display-5">Sign Up</h1>
-    <form  th:action="@{/signup}" method="POST">
-        <div id="success-msg" th:if="${signupSuccess}" class="alert alert-dark">
-            You successfully signed up! Please continue to the <a id="login-link" th:href="@{/login}">login</a> page.
-        </div>
+    <form action="#" th:action="@{/signup}" method="POST">
+<!--        <div id="success-msg" th:if="${signupSuccess}" class="alert alert-dark">
+            You successfully signed up! Please continue to the <a id="login-link" href="#" th:href="@{/login}">login</a> page.
+        </div>-->
         <div id="error-msg" th:if="${signupError}" class="alert alert-danger">
             <span th:text="${signupError}">Example Signup Error Message</span>
         </div>
